# eol_scons

./: .cvsignore  .gitignore  .project  CHANGELOG.md  Doxyfile  Jenkinsfile  LICENSE  MANIFEST.in  Notes  README  README.md  README.packages  SConstruct  UserGuide.md  __init__.py  autogen.sh  build_projects.sh  copyright  imagecomparisonpage.py  jenkins.sh  log4cpp.m4  maketags  pyproject.toml  release
.github/workflows/: codeql.yml
DEBIAN/: control  postinst  prerm
doxy/: Doxyfile
eol_scons/: Notes  README  __init__.py  chdir.py  convert  datafilecache.py  debug.py  gitinfo.py  imagecomparisonpage.py  installmode.py  ldd.py  library.py  maketags  methods.py  package.py  parseconfig.py  qt_utils.py  release  sitedir.py  spawner.py  tool.py  utils.py  variables.py  xvfb.py
eol_scons/doxy/: Doxyfile  mainpage.dox
eol_scons/hooks/: default.py
eol_scons/postgres/: __init__.py  testdb.py
eol_scons/scripts/: build_rpm.sh  eol_scons.spec
eol_scons/tests/: SConsSiteTool  SConstruct  im.py  runtests
eol_scons/tools/: ace.py  ace_qt.py  apar.py  armbecross.py  armcross.py  armelcross.py  armhfcross.py  bdb.py  bitrock.py  boost.py  boost_date_time.py  boost_filesystem.py  boost_log.py  boost_mutex.py  boost_num_util.py  boost_program_options.py  boost_python.py  boost_regex.py  boost_serialization.py  boost_signals.py  boost_system.py  boost_test.py  boost_thread.py  buildmode.py  bz2.py  canfestival.py  coin.py  colorbuildmessages.py  cppcheck.py  cppunit.py  datafilecache.py  ddu.py  debug.py  default.py  deploy.py  (+89 more)
examples/: SConstruct
scripts/: WindowsDependenciesTemplate.xml  build_dpkg.sh  build_rpm.sh  changelog.sh  deb_changelog.sh  eol_scons.spec  fix_app_bundle_paths.py  get_windows_dependency_list.py  release  updatetoc
site_tools/: ace.py  armbecross.py  armcross.py  bitrock.py  boost.py  boost_date_time.py  boost_mutex.py  boost_program_options.py  boost_serialization.py  boost_system.py  boost_thread.py  buildmode.py  canfestival.py  coin.py  deploy.py  docbook.py  doxygen.py  eol_scons_tool.py  gcc.py  gitinfo.py  gsl.py  jlocal.py  kmake.py  log4cpp.py  logx.py  lrose.py  mex.py  msvc.py  netcdf.py  nidas.py  omniorb.py  opendds12.py  osxqtapp.py  postgres_pq.py  postgres_testdb.py  prefixoptions.py  protoc.py  pylint.py  pylintrc  pytest.py  (+25 more)
templates/: SConstruct  Templates.md  interp.cc
tests/: .gitignore  SConsNoDefault  SConsToolOnly  SConstruct  conftest.py  dummy-config.py  runtests  test_datafilecache.py  test_no_default_hook.py  test_qt5.py  test_qt_utils.py  test_sharedlibrary.py  test_site_tool.py  test_testdb.py  test_testing.py  test_text2cc.py  test_valgrind.py  test_xvfb.py
(+18 files in other folders)
